<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My first app</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="liverpool_games">Liverpool Games</string>
    <string name="button_show_recent">Show Recent</string>
    <string name="button_show_next">Show Next</string>
    <string name="button_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_show_match">Liverpool Games</string>
    <string name="title_activity_show_next_match">ShowNextMatchActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
