<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <EditText android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <Button android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_message"
        android:text="@string/button_send"
        android:onClick="sendMessage" />
    <TextView android:id="@+id/label" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/btnSend"
        android:text="@string/liverpool_games" />
    <TextView android:id="@+id/s" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/label" />
    
     <Button android:id="@+id/btnShowRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/s"
        android:layout_marginRight="10dp"
        android:text="@string/button_show_recent"
        android:onClick="showRecentMatch" />  
     <Button android:id="@+id/btnShowNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnShowRecent"
        android:layout_toRightOf="@id/btnShowRecent"
        android:text="@string/button_show_next"
        android:onClick="showNextMatch" /> 
</RelativeLayout>
